--- a/public/_moved.html
+++ b/public/_moved.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     Sokoban(g) has
-    <a href="https://obfusk.ch/sokobang/">moved here</a>.
+    <a href="https://obfusk.ch/sokobang/" target="_top">moved here</a>.
   </body>
 </html>
