fix mobile etc.
* fix android workflow
* viewport stuff
* miscellaneous stuff

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Sokoban(g)</title>
     <style>
-      body, html      { width: 100%; height: 100%; margin: 0px; }
+      body, html      { width: 100%; height: 100%; margin: 0px;
+                        font-family: "DejaVu Sans", -apple-system,
+                        BlinkMacSystemFont, "Segoe UI", Roboto,
+                        "Helvetica Neue", Arial, sans-serif; }
       #CANVAS         { display: block; border: 1px solid black;
                         background-color: #666; }
       .center         { text-align: center; padding: 10px; }
@@ -13,8 +18,10 @@
       .w700           { max-width: 700px; }
       .nowrap         { display: inline-block; }
       select, button  { font-size: 1em; }
-      #buttons button { font-size: 2em; height: 1.5em; width: 1.5em;
-                        border: 1px solid black; }
+      #buttons button { font-size: 28px; height: 48px; width: 48px;
+                        background-color: white;
+                        border: 1px solid black; border-radius: 5px; }
+      #controls span  { padding: 0.2em; }
     </style>
     <script src="js/jquery.min.js"></script>
     <script src="js/underscore-min.js"></script>
@@ -32,12 +39,18 @@
       <img id="wall_img"        src="img/wall.png"        alt="IMG" />
     </div>
     <div id="controls" class="center">
-      <label>Set:</label>
-      <select id="sets"></select>
-      <label>Level:</label>
-      <select id="levels"></select>
-      <button id="play">Play</button>
-      <button id="next">Next</button>
+      <span class="nowrap">
+        <label>Set:</label>
+        <select id="sets"></select>
+      </span>
+      <span class="nowrap">
+        <label>Level:</label>
+        <select id="levels"></select>
+      </span>
+      <span class="nowrap">
+        <button id="play">Play</button>
+        <button id="next">Next</button>
+      </span>
     </div>
     <canvas id="CANVAS" class="middle"></canvas>
     <div id="data" class="center">
