--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,10 @@
           » <a href="README.ksokoban.txt" target="_blank"
               rel="noopener">Images &amp; Levels</a>
         </span>
+        <span class="nowrap">
+          » <a href="privacy.txt" target="_blank"
+              rel="noopener">Privacy</a>
+        </span>
       </small>
     </footer>
   </body>
