remember completed levels in localStorage
closes #7

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
               <span id="set">?</span>
               <label>Level</label>
               <span id="level" class="badge badge-info">?</span>
+              <span id="completed" class="badge badge-success">✓</span>
               &mdash;
               <span id="moves" class="badge badge-info">?</span>
               <label>Moves</label>
