--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
               <button class="btn btn-primary" id="play">Play</button>
               <button class="btn btn-primary" id="next">Next »</button>
             </span>
-            <span class="form-group m-1 form-check form-check-inline w-auto">
+            <span class="form-group m-1 form-check form-check-inline w-auto pb-1">
               <input class="form-check-input" type="checkbox" id="zoom">
               <label class="form-check-label" for="zoom">Zoom out</label>
             </span>
