--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/alert.js"></script>
-    <script src="coffee/bigbang.js"></script>
+    <script src="coffee/bigbang.js?v=1"></script>
     <script src="coffee/sokobang.js"></script>
-    <script src="coffee/start.js?v=0.2.0"></script>
+    <script src="coffee/start.js?v=1"></script>
   </head>
   <body class="text-center">
     <div id="images" class="d-none">
