improve scroll & restore hash

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="container">
       <div class="row justify-content-center p-1">
-        <div class="card col-lg-9">
+        <div id="data-and-buttons" class="card col-lg-9">
           <div class="card-body p-2">
             <div id="data">
               <span id="set">?</span>
