allow moving by clicking
closes #10

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <script src="js/underscore-min.js"></script>
     <script src="js/alert.js"></script>
     <script src="coffee/bigbang.js?v=1"></script>
-    <script src="coffee/sokobang.js"></script>
+    <script src="coffee/sokobang.js?v=1"></script>
     <script src="coffee/start.js?v=1"></script>
   </head>
   <body class="text-center">
@@ -102,9 +102,10 @@
       <div class="row justify-content-center px-1 pt-0 pb-1">
         <div class="alert alert-light col-lg-9 mb-0" role="alert">
           Move the objects to the goals by pushing them (using as few
-          moves and pushes as possible).  Use the <strong>arrow keys or
-          buttons</strong> to move; press <strong>u</strong> to undo the
-          last move.
+          moves and pushes as possible).  Use the <strong>arrow keys
+          or buttons</strong> or <strong>click to the
+          left/down/up/right of the "man"</strong> to move; press
+          <strong>u</strong> to undo the last move.
         </div>
       </div>
       <hr/>
