improve game play text

--- a/public/index.html
+++ b/public/index.html
@@ -102,10 +102,10 @@
       <div class="row justify-content-center px-1 pt-0 pb-1">
         <div class="alert alert-light col-lg-9 mb-0" role="alert">
           Move the objects to the goals by pushing them (using as few
-          moves and pushes as possible).  Use the <strong>arrow keys
-          or buttons</strong> or <strong>click to the
-          left/down/up/right of the "man"</strong> to move; press
-          <strong>u</strong> to undo the last move.
+          moves and pushes as possible).  Use the <strong>arrow
+          keys</strong> or buttons or <strong>click/tap</strong> (to
+          the left/right of or above/below the "warehouse keeper") to
+          move; press <strong>u</strong> to undo the last move.
         </div>
       </div>
       <hr/>
