--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
       </div>
       <hr/>
     </div>
-    <footer class="mb-3">
+    <footer class="mb-3 mx-3">
       <small>
         <span class="nowrap">
           © 2020 Felix C. Stegerman
