--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <!--
 
   File        : templates/index.html
-  Maintainer  : Felix C. Stegerman <flx@obfusk.net>
+  Maintainer  : FC Stegerman <flx@obfusk.net>
   Date        : 2020-09-08
 
-  Copyright   : Copyright (C) 2020  Felix C. Stegerman
+  Copyright   : Copyright (C) 2020  FC Stegerman
   Version     : v0.2.1
   License     : AGPLv3+
 
@@ -117,7 +117,7 @@
     <footer class="mb-3 mx-3">
       <small>
         <span class="nowrap">
-          © 2020 Felix C. Stegerman
+          © 2020 FC Stegerman
         </span>
         <a href="https://ko-fi.com/obfusk"
           target="_blank" rel="noopener"
